Update color and reinforce weight to last modify to fix contrast and differ the lines from footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -221,6 +221,6 @@ footer p{
 }
 
 #lastModified{
-	color: var(--accent2-color);
+	color: var(--text-color-on-color);
 	font-weight: 900;
 }
